--- a/app/src/main/res/layout/activity_seatbooking.xml
+++ b/app/src/main/res/layout/activity_seatbooking.xml
@@ -6,67 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".seatbooking">
 
-    <ImageView
-        android:id="@+id/img3"
-        android:layout_width="68dp"
-        android:layout_height="71dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.396"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.575"
-        app:srcCompat="@drawable/avatar" />
-
-    <ImageView
-        android:id="@+id/img4"
-        android:layout_width="68dp"
-        android:layout_height="71dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.594"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.575"
-        app:srcCompat="@drawable/avatar" />
-
-    <ImageView
-        android:id="@+id/img2"
-        android:layout_width="68dp"
-        android:layout_height="71dp"
-        android:layout_marginEnd="128dp"
-        android:layout_marginRight="128dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/img1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.421"
-        app:srcCompat="@drawable/avatar" />
-
-    <ImageView
-        android:id="@+id/img1"
-        android:layout_width="68dp"
-        android:layout_height="71dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.396"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.421"
-        app:srcCompat="@drawable/avatar" />
-
     <TextView
         android:id="@+id/txName"
-        android:layout_width="140dp"
-        android:layout_height="43dp"
+        android:layout_width="202dp"
+        android:layout_height="31dp"
         android:text="Firstname + Lastname"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.174" />
+        app:layout_constraintVertical_bias="0.076" />
 
     <TextView
         android:id="@+id/txInfo"
@@ -75,9 +25,10 @@
         android:text="Please Choose Your Seat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.29" />
+        app:layout_constraintVertical_bias="0.165" />
 
     <Button
         android:id="@+id/btnSubmitSeat"
@@ -86,9 +37,125 @@
         android:text="Confirm my Seat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.971"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.692" />
+        app:layout_constraintVertical_bias="0.898" />
+
+    <ImageView
+        android:id="@+id/imgGFloor"
+        android:layout_width="570dp"
+        android:layout_height="294dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.803"
+        app:srcCompat="@drawable/nssb_floorplan_g" />
+
+    <Button
+        android:id="@+id/btnZoneGA"
+        android:layout_width="134dp"
+        android:layout_height="87dp"
+        android:layout_marginStart="172dp"
+        android:layout_marginLeft="172dp"
+        android:layout_marginBottom="24dp"
+        android:background="@android:color/transparent"
+        android:text="Zone A"
+        android:textColor="#f54242"
+        app:layout_constraintBottom_toBottomOf="@+id/imgGFloor"
+        app:layout_constraintStart_toStartOf="@+id/imgGFloor"
+        app:layout_constraintTop_toBottomOf="@+id/btnZoneGB"
+        app:layout_constraintVertical_bias="0.8" />
+
+    <Button
+        android:id="@+id/btnZoneGB"
+        android:layout_width="132dp"
+        android:layout_height="133dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="396dp"
+        android:layout_marginRight="396dp"
+        android:background="@android:color/transparent"
+        android:text="Zone B"
+        android:textColor="#f54242"
+        app:layout_constraintBottom_toBottomOf="@+id/imgGFloor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/imgGFloor"
+        app:layout_constraintTop_toBottomOf="@+id/txInfo"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btnZoneMA"
+        android:layout_width="132dp"
+        android:layout_height="133dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="396dp"
+        android:layout_marginRight="396dp"
+        android:background="@android:color/transparent"
+        android:text="Zone A"
+        android:textColor="#f54242"
+        app:layout_constraintBottom_toBottomOf="@+id/imgGFloor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.994"
+        app:layout_constraintStart_toStartOf="@+id/imgGFloor"
+        app:layout_constraintTop_toBottomOf="@+id/txInfo"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btnZoneGC"
+        android:layout_width="132dp"
+        android:layout_height="133dp"
+        android:background="@android:color/transparent"
+        android:text="Zone C"
+        android:textColor="#f54242"
+        app:layout_constraintBottom_toBottomOf="@+id/imgGFloor"
+        app:layout_constraintEnd_toEndOf="@+id/imgGFloor"
+        app:layout_constraintHorizontal_bias="0.345"
+        app:layout_constraintStart_toEndOf="@+id/btnZoneGB"
+        app:layout_constraintTop_toTopOf="@+id/imgGFloor"
+        app:layout_constraintVertical_bias="0.248" />
+
+    <Button
+        android:id="@+id/btnZoneMB"
+        android:layout_width="132dp"
+        android:layout_height="133dp"
+        android:layout_marginTop="36dp"
+        android:background="@android:color/transparent"
+        android:text="Zone B"
+        android:textColor="#f54242"
+        app:layout_constraintEnd_toEndOf="@+id/imgGFloor"
+        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintStart_toEndOf="@+id/btnZoneGB"
+        app:layout_constraintTop_toTopOf="@+id/imgGFloor" />
+
+    <Button
+        android:id="@+id/btnGFloor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="152dp"
+        android:text="G Floor"
+        app:layout_constraintEnd_toStartOf="@+id/imgGFloor"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnMFloor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:text="M Floor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imgGFloor"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnGFloor"
+        app:layout_constraintVertical_bias="0.0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
